Fix photoswipe z-index
Was appearing under top nav bar

--- a/themes/quire-base-theme/source/css/_figure.scss
+++ b/themes/quire-base-theme/source/css/_figure.scss
@@ -519,3 +519,7 @@ div.q-figure__video__print-fallback,
     margin-right: 0;
   }
 }
+
+.pswp--open {
+  z-index: 10000;
+}
